--- a/doc/release-notes.adoc
+++ b/doc/release-notes.adoc
@@ -1,11 +1,11 @@
 = HDFS Connector Release Notes
 :keywords: release notes, connectors, hdfs
 
-The Anypoint Connector for the Hadoop Distributed File System (HDFS) is used as a bi-directional gateway between applications. Its source is stored at the link:http://mulesoft.github.io/hdfs-connector/[HDFS Connector GitHub site].
+The Anypoint Connector for the Hadoop Distributed File System (HDFS) is used as a bi-directional gateway between Mule applications and HDFS.
 
 link:/hdfs-connector[HDFS Connector User Guide]
 
-== Version 5.0.0 - <Release_date>
+== Version 5.0.0 - September 13, 2016
 
 === Version 5.0.0 Compatibility
 
