--- a/doc/release-notes.adoc
+++ b/doc/release-notes.adoc
@@ -3,7 +3,7 @@
 
 The Anypoint Connector for the Hadoop Distributed File System (HDFS) is used as a bi-directional gateway between Mule applications and HDFS.
 
-link:/hdfs-connector[HDFS Connector User Guide]
+link:/mule-user-guide/v/3.8/hdfs-connector[HDFS Connector User Guide]
 
 == Version 5.0.0 - September 13, 2016
 
