--- a/doc/user-manual.adoc
+++ b/doc/user-manual.adoc
@@ -120,23 +120,6 @@ If you are manually coding the Mule application in Studio's XML editor or other 
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/hdfs http://www.mulesoft.org/schema/mule/hdfs/current/mule-hdfs.xsd">
 </mule>
-----
-In order to install the connector in Anypoint Studio enviroment you need to add the following maven dependency in the project's pom:
-----
-        <dependency>
-		         <groupId>org.mule.connectors</groupId>
-                 <artifactId>mule-hdfs-connector</artifactId>
-                 <version>6.0.0-rc</version>
-                 <classifier>mule-plugin</classifier>
-	   </dependency>
-----
-
-[TIP]
-====
-Inside the `<version>` tags, put the desired version number, the word `RELEASE` for the latest release, or `SNAPSHOT` for the latest available version. The available versions to date are:
-
-* *6.0.0-rc*
-====
 
 == Demo Mule Application Using Connector
 
@@ -156,37 +139,9 @@ image:create-file-flow.png[Create file flow]
 +
 . Run the application. From your favorite HTTP client make a POST request with "Content-type:plain/text" to `locahost:8081/createFile` with content that you want to write as payload. (e.g. `curl -X POST -H "Content-Type:plain/text" -d "payload to write to file" localhost:8090/createFile`)
 . Check that */test.txt* has been created and has your content by using Hadoop explorer.
-
-
-=== Create a File into HDFS - XML
-
-Paste this into Anypoint Studio to interact with the example use case application discussed in this guide.
-
-[source,xml,linenums]
-----
-<?xml version="1.0" encoding="UTF-8"?>
-<mule xmlns:http="xmlns:hdfs="http://www.mulesoft.org/schema/mule/hdfs"
-      	xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
-      	xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
-      	xmlns:spring="http://www.springframework.org/schema/beans"
-      	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      	xsi:schemaLocation="
-      http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
-      http://www.mulesoft.org/schema/mule/ee/core http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
-      http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
-      http://www.mulesoft.org/schema/mule/hdfs http://www.mulesoft.org/schema/mule/hdfs/current/mule-hdfs.xsd">
-    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration"/>
-    <hdfs:config name="HDFS__Configuration" nameNodeUri="hdfs://localhost:9000" doc:name="HDFS: Configuration"/>
-    <flow name="hdfs-example-use-caseFlow">
-        <http:listener config-ref="HTTP_Listener_Configuration" path="/createFile" doc:name="HTTP"/>
-        <hdfs:write config-ref="HDFS__Configuration" path="/test.txt" doc:name="HDFS"/>
-    </flow>
-</mule>
-----
+* A demo with the above mentioned use case was provided.
 
 == Connector Performance
-
-To define the pooling profile for the connector manually, access the *Pooling Profile* tab in the applicable global element for the connector.
 
 == Resources
 
