--- a/doc/release-notes.adoc
+++ b/doc/release-notes.adoc
@@ -3,6 +3,8 @@
 
 The Anypoint Connector for the Hadoop Distributed File System (HDFS) is used as a bi-directional gateway between Mule applications and HDFS.
 
++See the link:/mule-user-guide/v/4.0/hdfs-connector[HDFS Connector User Guide].
+
 == Version 6.0.0 - September 28, 2017
 
 === Version 6.0.0 Compatibility
@@ -15,25 +17,26 @@ The Anypoint Connector for the Hadoop Distributed File System (HDFS) is used as 
 |===
 === Migrating from Older Versions
 
+*Not applicable
+
+=== Features
+
+*Not applicable
 
 
+=== Version 6.0.0 Fixed in this Release
+
+*Not applicable
 
 
+=== Version 6.0.0 Known Issues
 
+*There are no known issues in this version
 
+=== See also
 
+Learn how to Install Anypoint Connectors using Anypoint Exchange.
 
+Access MuleSoft’s Forum to pose questions and get help from Mule’?s broad community of users.
 
-
-
-
-
-
-
-
-
-
-
-
-
-* To access MuleSoft?s expert support team, http://www.mulesoft.com/mule-esb-subscription[subscribe] to Mule ESB Enterprise and log in to MuleSoft?s http://www.mulesoft.com/support-login[Customer Portal]. 
+To access MuleSoft’s expert support team, subscribe to Mule ESB Enterprise and log into MuleSoft’s Customer Portal.
